--- a/WeatherDay/View/Controller/Cell/0.WeatherToday/WeatherTodayTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/0.WeatherToday/WeatherTodayTableViewCell.xib
@@ -16,13 +16,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SDA-WQ-ODh">
-                        <rect key="frame" x="0.0" y="10" width="414" height="42.333333333333336"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56.333333333333336"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_01" translatesAutoresizingMaskIntoConstraints="NO" id="Nkj-Dp-h9O">
-                                <rect key="frame" x="0.0" y="0.0" width="72.666666666666671" height="42.333333333333336"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_sun" translatesAutoresizingMaskIntoConstraints="NO" id="Nkj-Dp-h9O">
+                                <rect key="frame" x="0.0" y="0.0" width="72.666666666666671" height="56.333333333333336"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fw1-Qr-9S6">
-                                <rect key="frame" x="82.666666666666657" y="0.0" width="331.33333333333337" height="42.333333333333336"/>
+                                <rect key="frame" x="82.666666666666657" y="0.0" width="331.33333333333337" height="56.333333333333336"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -30,28 +30,28 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Nkj-Dp-h9O" firstAttribute="top" secondItem="SDA-WQ-ODh" secondAttribute="top" id="GLs-pF-Nap"/>
                             <constraint firstItem="fw1-Qr-9S6" firstAttribute="width" secondItem="SDA-WQ-ODh" secondAttribute="width" multiplier="0.8" id="JRz-je-YgM"/>
                             <constraint firstItem="fw1-Qr-9S6" firstAttribute="leading" secondItem="Nkj-Dp-h9O" secondAttribute="trailing" constant="10" id="PlF-66-9uW"/>
                             <constraint firstAttribute="bottom" secondItem="Nkj-Dp-h9O" secondAttribute="bottom" id="Yjy-zC-cVa"/>
                             <constraint firstItem="Nkj-Dp-h9O" firstAttribute="leading" secondItem="SDA-WQ-ODh" secondAttribute="leading" id="exE-3u-KcL"/>
+                            <constraint firstItem="Nkj-Dp-h9O" firstAttribute="top" secondItem="SDA-WQ-ODh" secondAttribute="top" id="fz7-vj-beZ"/>
                             <constraint firstItem="fw1-Qr-9S6" firstAttribute="bottom" secondItem="Nkj-Dp-h9O" secondAttribute="bottom" id="oGx-r4-Wie"/>
                             <constraint firstItem="fw1-Qr-9S6" firstAttribute="top" secondItem="Nkj-Dp-h9O" secondAttribute="top" id="pjp-ae-Pj0"/>
                             <constraint firstAttribute="trailing" secondItem="fw1-Qr-9S6" secondAttribute="trailing" id="ydS-r4-MtL"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5MC-O8-tuw">
-                        <rect key="frame" x="0.0" y="62.333333333333343" width="160" height="42"/>
+                        <rect key="frame" x="0.0" y="66.333333333333329" width="160" height="56.333333333333329"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qke-tA-P8j">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="42"/>
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="56.333333333333336"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="A4b-Rg-p2p">
-                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="35" height="39.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="35" height="54"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsJ-ff-iKe">
-                                        <rect key="frame" x="45" y="0.0" width="35" height="42"/>
+                                        <rect key="frame" x="45" y="0.0" width="35" height="56.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -60,14 +60,14 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Haw-xR-g3a">
-                                <rect key="frame" x="80" y="0.0" width="80" height="42"/>
+                                <rect key="frame" x="80" y="0.0" width="80" height="56.333333333333336"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zBu-06-bO0">
-                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="35" height="39.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="35" height="54"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eeo-nG-B6w">
-                                        <rect key="frame" x="45" y="0.0" width="35" height="42"/>
+                                        <rect key="frame" x="45" y="0.0" width="35" height="56.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -91,7 +91,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmL-BM-dmA">
-                        <rect key="frame" x="0.0" y="114.33333333333333" width="266" height="147.66666666666669"/>
+                        <rect key="frame" x="0.0" y="132.66666666666663" width="266" height="129.33333333333337"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="110"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -99,12 +99,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="5MC-O8-tuw" firstAttribute="leading" secondItem="SDA-WQ-ODh" secondAttribute="leading" id="0sf-ro-Btj"/>
+                    <constraint firstItem="SDA-WQ-ODh" firstAttribute="top" secondItem="L54-uo-N7e" secondAttribute="top" id="7Gc-ku-3RH"/>
                     <constraint firstItem="FmL-BM-dmA" firstAttribute="leading" secondItem="5MC-O8-tuw" secondAttribute="leading" id="8Zz-Dz-urp"/>
                     <constraint firstItem="5MC-O8-tuw" firstAttribute="top" secondItem="SDA-WQ-ODh" secondAttribute="bottom" constant="10" id="CXU-45-qR2"/>
-                    <constraint firstItem="SDA-WQ-ODh" firstAttribute="height" secondItem="L54-uo-N7e" secondAttribute="height" multiplier="0.149701" id="GMw-3o-GID"/>
+                    <constraint firstItem="SDA-WQ-ODh" firstAttribute="height" secondItem="L54-uo-N7e" secondAttribute="height" multiplier="0.2" id="GMw-3o-GID"/>
                     <constraint firstAttribute="trailing" secondItem="SDA-WQ-ODh" secondAttribute="trailing" id="X2i-Ao-GNR"/>
                     <constraint firstAttribute="bottom" secondItem="FmL-BM-dmA" secondAttribute="bottom" constant="20" id="cwo-GB-23Z"/>
-                    <constraint firstItem="SDA-WQ-ODh" firstAttribute="top" secondItem="L54-uo-N7e" secondAttribute="top" constant="10" id="e9T-S4-cU7"/>
                     <constraint firstItem="SDA-WQ-ODh" firstAttribute="leading" secondItem="L54-uo-N7e" secondAttribute="leading" id="fkd-nD-fW8"/>
                     <constraint firstItem="FmL-BM-dmA" firstAttribute="top" secondItem="5MC-O8-tuw" secondAttribute="bottom" constant="10" id="hCz-eR-6Zu"/>
                     <constraint firstItem="5MC-O8-tuw" firstAttribute="height" secondItem="SDA-WQ-ODh" secondAttribute="height" id="kvS-zL-yNK"/>
@@ -123,6 +123,6 @@
     <resources>
         <image name="arrow.down" catalog="system" width="120" height="128"/>
         <image name="arrow.up" catalog="system" width="120" height="128"/>
-        <image name="img_01" width="202.5" height="360"/>
+        <image name="img_sun" width="48" height="48"/>
     </resources>
 </document>
