--- a/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
@@ -9,73 +9,96 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="DailyTableViewCell" customModule="WeatherDay" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="DailyTableViewCell" customModule="WeatherDay" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="360" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <visualEffectView opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWi-2i-8M0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
-                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RIh-hH-p1X">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                    <visualEffectView opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qob-43-0Wq">
+                        <rect key="frame" x="0.0" y="0.0" width="272.5" height="79"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8bi-8A-ryr">
+                            <rect key="frame" x="0.0" y="0.0" width="272.5" height="79"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <blurEffect style="regular"/>
                     </visualEffectView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndV-2c-uNl">
-                        <rect key="frame" x="20" y="30" width="110" height="19.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FTY-30-vvD">
+                        <rect key="frame" x="10" y="0.0" width="262.5" height="79"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndV-2c-uNl">
+                                <rect key="frame" x="0.0" y="0.0" width="42.5" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="vfI-NT-pHu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="img_storm" translatesAutoresizingMaskIntoConstraints="NO" id="dan-RS-wC9">
+                                <rect key="frame" x="42.5" y="0.0" width="55" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="55" id="Q3R-r8-t9h"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="th9-fh-bLI">
+                                <rect key="frame" x="97.5" y="0.0" width="55" height="79"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-6A-SaW">
+                                <rect key="frame" x="152.5" y="0.0" width="55" height="79"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mby-wo-Ix3">
+                                <rect key="frame" x="207.5" y="0.0" width="55" height="79"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="width" constant="110" id="5uE-HU-aMh"/>
+                            <constraint firstItem="Mby-wo-Ix3" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="kWw-Nh-F3Q"/>
+                            <constraint firstItem="ytJ-6A-SaW" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="ouD-sZ-OQc"/>
+                            <constraint firstItem="th9-fh-bLI" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="sdo-cA-t7p"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dan-RS-wC9">
-                        <rect key="frame" x="140" y="15" width="60" height="49"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mby-wo-Ix3">
-                        <rect key="frame" x="210" y="30" width="42.5" height="19.5"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-6A-SaW">
-                        <rect key="frame" x="267.5" y="30" width="42.5" height="19.5"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </stackView>
                 </subviews>
-                <color key="backgroundColor" red="0.2979907691" green="0.29798662660000003" blue="0.30208066109999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="bWi-2i-8M0" secondAttribute="trailing" id="5Bk-1K-4Se"/>
-                    <constraint firstItem="ytJ-6A-SaW" firstAttribute="leading" secondItem="Mby-wo-Ix3" secondAttribute="trailing" constant="15" id="C2n-jR-is9"/>
-                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="leading" secondItem="dan-RS-wC9" secondAttribute="trailing" constant="10" id="R8t-tV-dn8"/>
-                    <constraint firstItem="ytJ-6A-SaW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SdV-Jb-XkB"/>
-                    <constraint firstItem="bWi-2i-8M0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Yp5-rr-VT0"/>
-                    <constraint firstItem="dan-RS-wC9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="afm-PJ-FDb"/>
-                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jaP-zd-aFg"/>
-                    <constraint firstAttribute="bottom" secondItem="dan-RS-wC9" secondAttribute="bottom" constant="15" id="mNX-B2-ecJ"/>
-                    <constraint firstAttribute="bottom" secondItem="bWi-2i-8M0" secondAttribute="bottom" id="nSc-5m-FGV"/>
-                    <constraint firstAttribute="trailing" secondItem="ytJ-6A-SaW" secondAttribute="trailing" constant="10" id="oPN-fe-iRP"/>
-                    <constraint firstItem="ndV-2c-uNl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="qAh-Ru-aRk"/>
-                    <constraint firstItem="dan-RS-wC9" firstAttribute="leading" secondItem="ndV-2c-uNl" secondAttribute="trailing" constant="10" id="sQx-c0-zhJ"/>
-                    <constraint firstItem="ndV-2c-uNl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="udj-IV-ARB"/>
-                    <constraint firstItem="bWi-2i-8M0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="yrC-Yy-nUk"/>
+                    <constraint firstItem="FTY-30-vvD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BLu-wn-edH"/>
+                    <constraint firstItem="qob-43-0Wq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BO1-4x-1Am"/>
+                    <constraint firstAttribute="bottom" secondItem="qob-43-0Wq" secondAttribute="bottom" id="Gzs-QN-YLo"/>
+                    <constraint firstAttribute="trailing" secondItem="FTY-30-vvD" secondAttribute="trailing" id="HiT-9s-IYv"/>
+                    <constraint firstItem="FTY-30-vvD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NtB-JX-5GF"/>
+                    <constraint firstAttribute="bottom" secondItem="FTY-30-vvD" secondAttribute="bottom" id="T6f-Mq-oPQ"/>
+                    <constraint firstItem="qob-43-0Wq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mWD-1w-pup"/>
+                    <constraint firstAttribute="trailing" secondItem="qob-43-0Wq" secondAttribute="trailing" id="uwi-ow-C6e"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                    <real key="value" value="0.0"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="dayOfWeekLabel" destination="ndV-2c-uNl" id="x9r-wR-C9M"/>
+                <outlet property="percentHumidityLabel" destination="th9-fh-bLI" id="5TD-iv-jJZ"/>
                 <outlet property="showWeatherImageView" destination="dan-RS-wC9" id="QtV-3d-sR1"/>
-                <outlet property="temperatureMaxLabel" destination="ytJ-6A-SaW" id="rvg-HZ-b9H"/>
-                <outlet property="temperatureMinLabel" destination="Mby-wo-Ix3" id="ZdR-ed-hmw"/>
+                <outlet property="temperatureMaxLabel" destination="Mby-wo-Ix3" id="rXJ-qn-MEN"/>
+                <outlet property="temperatureMinLabel" destination="ytJ-6A-SaW" id="dfm-xy-dbO"/>
             </connections>
-            <point key="canvasLocation" x="118.84057971014494" y="126.89732142857142"/>
+            <point key="canvasLocation" x="147.82608695652175" y="126.89732142857142"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="img_storm" width="48" height="48"/>
+    </resources>
 </document>
