--- a/WeatherDay/View/Controller/Home/HomeViewController.xib
+++ b/WeatherDay/View/Controller/Home/HomeViewController.xib
@@ -19,22 +19,31 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_01" translatesAutoresizingMaskIntoConstraints="NO" id="QLa-Yc-59j">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_01" id="QLa-Yc-59j">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Xsg-hG-39k">
+                <visualEffectView opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Efh-S0-WYY">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="IIq-SS-ZNV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <blurEffect style="regular"/>
+                </visualEffectView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Xsg-hG-39k">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="QLa-Yc-59j" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="3lQ-Gh-Mj4"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="QLa-Yc-59j" secondAttribute="trailing" id="8OL-8d-HDq"/>
+                <constraint firstAttribute="bottom" secondItem="Efh-S0-WYY" secondAttribute="bottom" id="AWY-x1-qMj"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Xsg-hG-39k" secondAttribute="bottom" id="D9l-Xr-0lk"/>
+                <constraint firstItem="Efh-S0-WYY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Fnc-fc-AMv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Xsg-hG-39k" secondAttribute="trailing" id="SJv-eb-nhN"/>
-                <constraint firstItem="QLa-Yc-59j" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="UJP-3x-5C4"/>
-                <constraint firstAttribute="bottom" secondItem="QLa-Yc-59j" secondAttribute="bottom" id="lvt-SB-UMS"/>
+                <constraint firstItem="Efh-S0-WYY" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="dQb-iA-jfW"/>
+                <constraint firstItem="Efh-S0-WYY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="obc-Gy-A2d"/>
                 <constraint firstItem="Xsg-hG-39k" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="t3S-je-N28"/>
                 <constraint firstItem="Xsg-hG-39k" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="v9A-S2-Khl"/>
             </constraints>
