--- a/WeatherDay/View/Controller/Cell/4.Map/MapTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/4.Map/MapTableViewCell.xib
@@ -26,13 +26,13 @@
                         <blurEffect style="regular"/>
                     </visualEffectView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maps" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nin-IB-4hg">
-                        <rect key="frame" x="10" y="5" width="44" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <rect key="frame" x="10" y="5" width="42.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Wu0-4H-fyb">
-                        <rect key="frame" x="10" y="36" width="300" height="167"/>
+                        <rect key="frame" x="10" y="34.5" width="300" height="168.5"/>
                     </mapView>
                 </subviews>
                 <constraints>
